Add python-future scl to CI
Change-Id: Ib2400d801e2f6878aa0452620d2b9079eb2c6f20

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -471,6 +471,9 @@ packages:
   - name: scl/python-flask-httpauth
     source: external
     scl: rh-python35
+  - name: scl/python-future
+    source: external
+    scl: rh-python35
 #  - name: scl/python-koji
 #    source: external
 #    scl: rh-python35
