Add new zuul requirements
Change-Id: If6bf873784a8ad5c0fb19eed866e6401fc77e228

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -80,6 +80,13 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: software-factory/re2
+    source: external
+
+  - name: scl/python-re2
+    source: external
+    scl: rh-python35
+
   - name: scl/zuul-jobs
     source: external
     scl: rh-python35
@@ -215,6 +222,14 @@ packages:
     #    scl: rh-python35
 
   - name: scl/python-pytest-runner
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-dulwich
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-reno
     source: external
     scl: rh-python35
 
