Add reno to the 3.0 repo
Change-Id: I2455e88057aa5ecf1463da00efd2ac27148e842f

--- a/sf-3.0.yaml
+++ b/sf-3.0.yaml
@@ -206,6 +206,14 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-dulwich
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-reno
+    source: external
+    scl: rh-python35
+
   - name: scl/python-multidict
     source: external
     scl: rh-python35
