use the job.branch setting to only run stable jobs for master branch
Change-Id: Ide07a10069dfc050a512ab2f71e22ec2f9a6c58c

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -38,8 +38,10 @@
       - sf-ci-jobs
     periodic:
       jobs:
-        - sf-deploy-stable
-        - sf-deploy-stable-cr
+        - sf-deploy-stable:
+            branches: master
+        - sf-deploy-stable-cr:
+            branches: master
 
 - project:
     name: software-factory/sf-distgit
