update from pike to queens
- use queens repo instead pike
- remove opstool depends as it depends on openstack-newton and
ceph-jewel (breaks queens depends)

Change-Id: Ib3b71de6b75bd59e943d4e76482a02885212ccdc

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -1006,14 +1006,8 @@ baserepos:
     kojipriority: 9
 
 extrarepos:
-  - name: openstack-pike
-    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-pike/
+  - name: openstack-queens
+    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-queens/
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
     gpgcheck: 1
     kojipriority: 5
-
-  - name: centos-opstools
-    baseurl: http://mirror.centos.org/centos/7/opstools/x86_64/
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-OpsTools
-    gpgcheck: 1
-    kojipriority: 7
