--- a/sf-3.0.yaml
+++ b/sf-3.0.yaml
@@ -80,6 +80,13 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: software-factory/re2
+    source: external
+
+  - name: scl/python-re2
+    source: external
+    scl: rh-python35
+
   - name: scl/zuul-jobs
     source: external
     scl: rh-python35
