Add cgit package
Change-Id: I28adaf0b7d4c86870293eb52e93cb67e16c41115

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -46,6 +46,10 @@ packages:
     source: internal
     spec: included
 
+  # Git
+  - name: software-factory/cgit
+    source: external
+
   # Auth
   - name: software-factory/mod_auth_pubtkt
     source: external
