templates: remove check jobs from light template
Change-Id: Icb3991efff326155c9fc88c98bb5c0381b91d5c9

--- a/zuul.d/templates.yaml
+++ b/zuul.d/templates.yaml
@@ -81,13 +81,7 @@
     name: sf-jobs-light
     check:
       jobs:
-        - sf-rpm-build
-        - sf-ci-functional-allinone:
-            dependencies:
-              - sf-rpm-build
-        - sf-ci-upgrade-allinone:
-            dependencies:
-              - sf-rpm-build
+        - noop
     gate:
       queue: sf
       jobs:
