Add missing python-kubernetes-0.6.0 requirements
Change-Id: I4e4c8049d3060cedcb273fa2f60ebafbd3a66803

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -236,6 +236,22 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-google-auth
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-cachetools
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-oauthlib
+    source: external
+    scl: rh-python35
+
+  - name: scl/python-requests-oauthlib
+    source: external
+    scl: rh-python35
+
   - name: scl/python-kubernetes
     source: external
     scl: rh-python35
