Add os-service-types package
Change-Id: Ida9ea6710a125ff09ee043e4acd318adee1152af

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -673,6 +673,9 @@ packages:
   - name: scl/python-openstacksdk
     source: external
     scl: rh-python35
+  - name: scl/python-os-service-types
+    source: external
+    scl: rh-python35
 
   - name: scl/python-pyperclip
     source: external
