Add periodic check of dependencies against CVS
This is required by Enterprise Security Standard v4.

Change-Id: Ib5dc0be28d89cb53768702ad51507171079fed1a

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -50,3 +50,8 @@
     run: playbooks/sfdocbuild.yaml
     post-run: playbooks/sfdocpublish.yaml
     success-url: 'docs-html/index.html'
+
+- job:
+    name: cvs-dependency-check
+    description: CVS dependency check
+    run: playbooks/csvdepcheck.yaml
