Enable full CI jobs for bubblewrap-distgit
Change-Id: I4d67f7b98419f2e9681cbb64240b95c989b81aaf

--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -32,7 +32,7 @@
 - project:
     name: software-factory/bubblewrap-distgit
     templates:
-      - sf-jobs-light
+      - sf-jobs
 
 - project:
     name: software-factory/buck-distgit
