Enable full CI jobs for log2gearman-distgit
Change-Id: I821aa19b637ebb6f2b7d47888ffa0cbf34c732ef

--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -412,7 +412,7 @@
 - project:
     name: software-factory/python-log2gearman-distgit
     templates:
-      - sf-jobs-light
+      - sf-jobs
 
 - project:
     name: software-factory/python-markupsafe-distgit
