cgit: enable ci jobs
Change-Id: I4513f1286a6fb3e8dc490299e359dccbbb762abd

--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -7,7 +7,7 @@
 - project:
     name: software-factory/cgit-distgit
     templates:
-      - sf-packaging-jobs
+      - sf-jobs-light
 
 - project:
     name: software-factory/acme-tiny-distgit
