Add experimental job to sf-config
Change-Id: Ia1f5a3456b5bd9cf73bfb2875f660c75233b6896

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -31,6 +31,12 @@
     check:
       jobs:
         - linters
+    experimental:
+      jobs:
+        - sf-rpm-build
+        - sf-ci-openshift-integration:
+            dependencies:
+              - sf-rpm-build
 
 - project:
     name: software-factory/sf-distgit
