Add patternfly-react-ui-deps package
Change-Id: If5f9bcaea179018b913956dade9445513b17a40b

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -74,8 +74,14 @@ packages:
 #  - name: software-factory/sf-selinux
 #    source: internal
 #    spec: included
+#
+  - name: software-factory/patternfly-react-ui-deps
+    source: external
 
   # Zuul
+  - name: software-factory/patternfly-react-ui-deps
+    source: external
+
   - name: scl/zuul
     source: external
     scl: rh-python35
