--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -1120,8 +1120,8 @@ baserepos:
     kojipriority: 9
 
 extrarepos:
-  - name: openstack-queens
-    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-queens/
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
-    gpgcheck: 1
-    kojipriority: 5
+#  - name: openstack-queens
+#    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-queens/
+#    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
+#    gpgcheck: 1
+#    kojipriority: 5
