--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -1113,15 +1113,4 @@ baserepos:
     gpgcheck: 1
     kojipriority: 10
 
-  - name: centos-sclo-rh
-    baseurl: http://mirror.centos.org/centos/7/sclo/x86_64/rh/
-    gpgcheck: 1
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-SCLo
-    kojipriority: 9
-
-extrarepos:
-  - name: openstack-queens
-    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-queens/
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
-    gpgcheck: 1
-    kojipriority: 5
+extrarepos: []
