zuul: switch to sf-centos-7 image
Use sf-centos-7 image for zuul jobs

Change-Id: Ife91ee1454f6344f1644f37041453275d9eefa60

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -8,7 +8,7 @@
     nodeset:
       nodes:
         - name: mock-host
-          label: dib-centos-7
+          label: sf-centos-7
 
 - job:
     name: sf-rpm-publish
@@ -21,7 +21,7 @@
     nodeset:
       nodes:
         - name: mock-host
-          label: dib-centos-7
+          label: sf-centos-7
 
 - job:
     name: swagger-lint
@@ -30,7 +30,7 @@
     nodeset:
       nodes:
         - name: test-host
-          label: dib-centos-7
+          label: sf-centos-7
 
 - job:
     name: swagger-publish
