zuul: switch to sf-centos-7 image
- Use sf-centos-7 image for zuul jobs
- install required packages and mock group in pre-run tasks
  for ci jobs

Change-Id: Ife91ee1454f6344f1644f37041453275d9eefa60
TG-1494

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -2,17 +2,19 @@
 - job:
     name: sf-rpm-build
     description: Build sf rpm
+    pre-run: playbooks/install_requirements.yaml
     run: playbooks/rpmbuild.yaml
     required-projects:
       - software-factory/sfinfo
     nodeset:
       nodes:
         - name: mock-host
-          label: dib-centos-7
+          label: sf-centos-7
 
 - job:
     name: sf-rpm-publish
     description: Publish sf rpm to koji
+    pre-run: playbooks/install_requirements.yaml
     run: playbooks/rpmpublish.yaml
     required-projects:
       - software-factory/sfinfo
@@ -21,7 +23,7 @@
     nodeset:
       nodes:
         - name: mock-host
-          label: dib-centos-7
+          label: sf-centos-7
 
 - job:
     name: swagger-lint
@@ -30,7 +32,7 @@
     nodeset:
       nodes:
         - name: test-host
-          label: dib-centos-7
+          label: sf-centos-7
 
 - job:
     name: swagger-publish
