Add experimental pipeline to zuul and nodepool distgit
Change-Id: Ic77c57f4910a3ea4380fec3a519dd70130802c4e

--- a/zuul.d/projects-scl.yaml
+++ b/zuul.d/projects-scl.yaml
@@ -216,6 +216,12 @@
     name: scl/nodepool-distgit
     templates:
       - sf-jobs
+    experimental:
+      jobs:
+        - sf-rpm-build
+        - sf-ci-openshift-integration:
+            dependencies:
+              - sf-rpm-build
 
 - project:
     name: scl/pyflakes-distgit
@@ -826,6 +832,12 @@
     name: scl/zuul-distgit
     templates:
       - sf-jobs
+    experimental:
+      jobs:
+        - sf-rpm-build
+        - sf-ci-openshift-integration:
+            dependencies:
+              - sf-rpm-build
 
 - project:
     name: scl/zuul-jobs-distgit
