Add git to the install requirements list
Change-Id: I5e86fc65b346c8fe76f77f71b98fe9c6c0239768

--- a/playbooks/install_requirements.yaml
+++ b/playbooks/install_requirements.yaml
@@ -7,6 +7,7 @@
         - name: Install required packages
           yum:
             name:
+              - git
               - createrepo
               - koji
               - mock
