--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -567,6 +567,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-jwcrypto
+    source: external
+    scl: rh-python35
+
   - name: scl/python-rjsmin
     source: external
     scl: rh-python35
