Add setuptools back
This is needed for new version of cryptography

Change-Id: I8240c0ed49f1bbceda1619364987fe30d275ce9a

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -334,10 +334,9 @@ packages:
     source: external
     scl: rh-python35
 
-    # TODO: check if this is still needed
-    #  - name: scl/python-setuptools
-    #    source: external
-    #    scl: rh-python35
+  - name: scl/python-setuptools
+    source: external
+    scl: rh-python35
 
   - name: scl/python-pytest-runner
     source: external
