Add gitolite3 in sfinfo
Change-Id: I3e09a93cc00be4635089a6cc94fa431d8d101521

--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -10,6 +10,11 @@
       - sf-packaging-jobs
 
 - project:
+    name: software-factory/gitolite3-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
     name: software-factory/cgit-distgit
     templates:
       - sf-jobs-light
