--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -85,6 +85,9 @@ packages:
   - name: software-factory/libgit2
     source: external
 
+  - name: software-factory/gitolite3
+    source: external
+
   - name: scl/python-re2
     source: external
     scl: rh-python35
