--- a/zuul.d/projects-distgit.yaml
+++ b/zuul.d/projects-distgit.yaml
@@ -10,6 +10,36 @@
       - sf-packaging-jobs
 
 - project:
+    name: software-factory/gitolite3-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
+    name: software-factory/perl-generators-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
+    name: software-factory/perl-Redis-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
+    name: software-factory/perl-IO-Socket-Timeout-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
+    name: software-factory/perl-PerlIO-via-Timeout-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
+    name: software-factory/perl-Test-TCP-distgit
+    templates:
+      - sf-packaging-jobs
+
+- project:
     name: software-factory/cgit-distgit
     templates:
       - sf-jobs-light
