Add python-selinux binding
Change-Id: Idbcc1d7c6370d8a87b9b937d9e3ea36a73171c05

--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -459,6 +459,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-selinux
+    source: external
+    scl: rh-python35
+
   - name: scl/python-scikit-learn
     source: external
     scl: rh-python35
