--- a/sf-3.2.yaml
+++ b/sf-3.2.yaml
@@ -427,6 +427,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-selinux
+    source: external
+    scl: rh-python35
+
   - name: scl/python-scikit-learn
     source: external
     scl: rh-python35
