Switch to cloud-centos-7 label
This change use the new virt-customized nodepool built image.

Change-Id: I508d58b0065b2544cb82e538ade93a2b984a89cc

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -9,7 +9,7 @@
     nodeset:
       nodes:
         - name: mock-host
-          label: sf-centos-7
+          label: cloud-centos-7
 
 - job:
     name: sf-rpm-publish
@@ -23,7 +23,7 @@
     nodeset:
       nodes:
         - name: mock-host
-          label: sf-centos-7
+          label: cloud-centos-7
 
 - job:
     name: swagger-lint
@@ -32,7 +32,7 @@
     nodeset:
       nodes:
         - name: test-host
-          label: sf-centos-7
+          label: cloud-centos-7
 
 - job:
     name: swagger-publish
