--- a/sf-master.yaml
+++ b/sf-master.yaml
@@ -1143,22 +1143,22 @@ chrootpackages: "@buildsys-build buildsys-macros-el7 make gcc shadow-utils rpm-b
 
 baserepos:
   - name: centos7-os
-    baseurl: http://mirror.centos.org/centos/7/os/x86_64/
-    mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=os
+    baseurl: http://mirror.regionone.rdo-cloud.rdoproject.org/centos/7/os/x86_64/
+    # mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=os
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
     gpgcheck: 1
     kojipriority: 12
 
   - name: centos7-updates
-    baseurl: http://mirror.centos.org/centos/7/updates/x86_64/
-    mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=updates
+    baseurl: http://mirror.regionone.rdo-cloud.rdoproject.org/centos/7/updates/x86_64/
+    # mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=updates
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
     gpgcheck: 1
     kojipriority: 11
 
   - name: centos7-extras
-    baseurl: http://mirror.centos.org/centos/7/extras/x86_64/
-    mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=extras
+    baseurl: http://mirror.regionone.rdo-cloud.rdoproject.org/centos/7/extras/x86_64/
+    # mirror: http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=extras
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
     gpgcheck: 1
     kojipriority: 10
@@ -1171,7 +1171,7 @@ baserepos:
 
 extrarepos:
   - name: openstack-queens
-    baseurl: http://mirror.centos.org/centos/7/cloud/x86_64/openstack-queens/
+    baseurl: http://mirror.regionone.rdo-cloud.rdoproject.org/centos/7/cloud/x86_64/openstack-queens/
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
     gpgcheck: 1
     kojipriority: 5
