--- a/sf-3.2.yaml
+++ b/sf-3.2.yaml
@@ -1132,7 +1132,8 @@ baserepos:
     kojipriority: 10
 
   - name: centos-sclo-rh
-    baseurl: http://mirror.centos.org/centos/7/sclo/x86_64/rh/
+    # baseurl: http://mirror.centos.org/centos/7/sclo/x86_64/rh/
+    baseurl: http://centos.mirror.vexxhost.com/7/sclo/x86_64/rh/
     gpgcheck: 1
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-SCLo
     kojipriority: 9
