--- a/sf-3.2.yaml
+++ b/sf-3.2.yaml
@@ -347,6 +347,10 @@ packages:
     source: external
     scl: rh-python35
 
+  - name: scl/python-sqlalchemy
+    source: external
+    scl: rh-python35
+
   - name: scl/python-six
     source: external
     scl: rh-python35
